Fix the visibility style in displayCards() and update the lauch.json

--- a/css/app.css
+++ b/css/app.css
@@ -45,6 +45,9 @@ h1 {
     padding: 32px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -53,7 +56,11 @@ h1 {
 }
 
 .deck .card {
+    position: relative;
     cursor: pointer;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,6 +70,7 @@ h1 {
     transition: transform .4s linear;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
+    margin: 5px;
 }
 
 .deck .card,
@@ -78,6 +86,8 @@ h1 {
     position: absolute;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    left: 0;
+    top: 0;
 }
 
 .back {
